--- a/language/en.json
+++ b/language/en.json
@@ -1,55 +1,55 @@
 {
-    "Preview": "Preview",
-    "Gallery": "Gallery",
-    "Generate": "Generate",
-    "Skip": "Skip",
-    "Stop": "Stop",
-    "Input Image": "Input Image",
-    "Advanced": "Advanced",
-    "Upscale or Variation": "Upscale or Variation",
-    "Image Prompt": "Image Prompt",
-    "Inpaint or Outpaint (beta)": "Inpaint or Outpaint (beta)",
-    "Drag above image to here": "Drag above image to here",
-    "Upscale or Variation:": "Upscale or Variation:",
-    "Disabled": "Disabled",
-    "Vary (Subtle)": "Vary (Subtle)",
-    "Vary (Strong)": "Vary (Strong)",
-    "Upscale (1.5x)": "Upscale (1.5x)",
-    "Upscale (2x)": "Upscale (2x)",
-    "Upscale (Fast 2x)": "Upscale (Fast 2x)",
-    "\ud83d\udcd4 Document": "\uD83D\uDCD4 Document",
-    "Image": "Image",
-    "Stop At": "Stop At",
-    "Weight": "Weight",
-    "Type": "Type",
+    "Preview": "Xem trước",
+    "Gallery": "Thư viện",
+    "Generate": "Tạo ảnh",
+    "Skip": "Bỏ qua",
+    "Stop": "Dừng lại",
+    "Input Image": "Đưa hình ảnh vào",
+    "Advanced": "Tùy chỉnh",
+    "Upscale or Variation": "Nâng cấp hình ảnh hoặc Biến đổi hình ảnh",
+    "Image Prompt": "Gợi ý hình ảnh",
+    "Inpaint or Outpaint (beta)": "Inpaint hoặc Outpaint (thử nghiệm)",
+    "Drag above image to here": "Đưa hình vào đây",
+    "Upscale or Variation:": "Nâng cấp hình ảnh hoặc Biến đổi hình ảnh:",
+    "Disabled": "Tắt",
+    "Vary (Subtle)": "Biến đổi (Tinh tế)",
+    "Vary (Strong)": "Biến đổi (Mạnh)",
+    "Upscale (1.5x)": "Nâng cấp hình ảnh (1.5x)",
+    "Upscale (2x)": "Nâng cấp hình ảnh (2x)",
+    "Upscale (Fast 2x)": "Nâng cấp hình ảnh (Nhanh 2x)",
+    "\ud83d\udcd4 Document": "Tài liệu \uD83D\uDCD4",
+    "Image": "Hình ảnh",
+    "Stop At": "Dừng ở",
+    "Weight": "Cân nặng",
+    "Type": "Kiểu",
     "PyraCanny": "PyraCanny",
     "CPDS": "CPDS",
-    "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).": "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).",
-    "The scaler multiplied to positive ADM (use 1.0 to disable).": "The scaler multiplied to positive ADM (use 1.0 to disable).",
-    "The scaler multiplied to negative ADM (use 1.0 to disable).": "The scaler multiplied to negative ADM (use 1.0 to disable).",
-    "When to end the guidance from positive/negative ADM.": "When to end the guidance from positive/negative ADM.",
-    "Similar to the Control Mode in A1111 (use 0.0 to disable).": "Similar to the Control Mode in A1111 (use 0.0 to disable).",
+    "* \"Image Prompt\" is powered by Fooocus Image Mixture Engine (v1.0.1).": "* \"Gợi ý hình ảnh\" được cung cấp bởi Công cụ hỗn hợp hình ảnh Fooocus (v1.0.1).",
+    "The scaler multiplied to positive ADM (use 1.0 to disable).": "Bộ chia tỷ lệ nhân với gợi ý tích cực ADM dương (sử dụng 1.0 để tắt).",
+    "The scaler multiplied to negative ADM (use 1.0 to disable).": "Bộ chia tỷ lệ nhân với gợi ý tiêu cực ADM âm (sử dụng 1.0 để tắt).",
+    "When to end the guidance from positive/negative ADM.": "Khi nào nên kết thúc hướng dẫn từ ADM tích cực/tiêu cực.",
+    "Similar to the Control Mode in A1111 (use 0.0 to disable).": "Tương tự như Chế độ Control trong A1111 (sử dụng 0,0 để tắt).",
     "Outpaint Expansion (": "Outpaint Expansion (",
     "Outpaint": "Outpaint",
-    "Left": "Left",
-    "Right": "Right",
-    "Top": "Top",
-    "Bottom": "Bottom",
-    "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)": "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)",
-    "Setting": "Setting",
-    "Style": "Style",
-    "Performance": "Performance",
-    "Speed": "Speed",
-    "Quality": "Quality",
+    "Left": "Trái",
+    "Right": "Phải",
+    "Top": "Trên",
+    "Bottom": "Dưới",
+    "* \"Inpaint or Outpaint\" is powered by the sampler \"DPMPP Fooocus Seamless 2M SDE Karras Inpaint Sampler\" (beta)": "* \"Inpaint hoặc Outpaint\" được cung cấp bởi bộ lấy mẫu \"DPMPP Fooocus Dàn 2M SDE Karras Inpaint Sampler\" (thử nghiệm)",
+    "Setting": "Cài đặt",
+    "Style": "Phong cách",
+    "Performance": "Hiệu suất/ Hiệu năng",
+    "Speed": "Tốc độ",
+    "Quality": "Chất lượng",
     "Aspect Ratios": "Aspect Ratios",
     "width \u00d7 height": "width \u00d7 height",
-    "Image Number": "Image Number",
-    "Negative Prompt": "Negative Prompt",
-    "Describing what you do not want to see.": "Describing what you do not want to see.",
-    "Random": "Random",
-    "Seed": "Seed",
-    "\ud83d\udcda History Log": "\uD83D\uDCDA History Log",
-    "Image Style": "Image Style",
+    "Image Number": "Số lượng hình ảnh",
+    "Negative Prompt": "Gợi ý tiêu cực",
+    "Describing what you do not want to see.": "Mô tả những gì bạn không muốn thấy ",
+    "Random": "Ngẫu nhiên",
+    "Seed": "Hạt giống hình ảnh",
+    "\ud83d\udcda History Log": "\uD83D\uDCDA Nhật ký lịch sử",
+    "Image Style": "Phong cách của hình ảnh",
     "Fooocus V2": "Fooocus V2",
     "Default (Slightly Cinematic)": "Default (Slightly Cinematic)",
     "Fooocus Masterpiece": "Fooocus Masterpiece",
@@ -262,7 +262,7 @@
     "Volumetric Lighting": "Volumetric Lighting",
     "Watercolor 2": "Watercolor 2",
     "Whimsical And Playful": "Whimsical And Playful",
-    "Model": "Model",
+    "Model": "Mô hình",
     "Base Model (SDXL only)": "Base Model (SDXL only)",
     "sd_xl_base_1.0_0.9vae.safetensors": "sd_xl_base_1.0_0.9vae.safetensors",
     "bluePencilXL_v009.safetensors": "bluePencilXL_v009.safetensors",
@@ -272,7 +272,7 @@
     "realisticVisionV51_v51VAE.safetensors": "realisticVisionV51_v51VAE.safetensors",
     "sd_xl_refiner_1.0_0.9vae.safetensors": "sd_xl_refiner_1.0_0.9vae.safetensors",
     "Refiner (SDXL or SD 1.5)": "Refiner (SDXL or SD 1.5)",
-    "None": "None",
+    "None": "Không có",
     "LoRAs": "LoRAs",
     "SDXL LoRA 1": "SDXL LoRA 1",
     "sd_xl_offset_example-lora_1.0.safetensors": "sd_xl_offset_example-lora_1.0.safetensors",
@@ -283,29 +283,29 @@
     "SDXL LoRA 3": "SDXL LoRA 3",
     "SDXL LoRA 4": "SDXL LoRA 4",
     "SDXL LoRA 5": "SDXL LoRA 5",
-    "Refresh": "Refresh",
-    "\ud83d\udd04 Refresh All Files": "\ud83d\udd04 Refresh All Files",
-    "Sampling Sharpness": "Sampling Sharpness",
-    "Higher value means image and texture are sharper.": "Higher value means image and texture are sharper.",
-    "Guidance Scale": "Guidance Scale",
-    "Higher value means style is cleaner, vivider, and more artistic.": "Higher value means style is cleaner, vivider, and more artistic.",
-    "Developer Debug Mode": "Developer Debug Mode",
-    "Developer Debug Tools": "Developer Debug Tools",
-    "Positive ADM Guidance Scaler": "Positive ADM Guidance Scaler",
-    "The scaler multiplied to positive ADM (use 1.0 to disable). ": "The scaler multiplied to positive ADM (use 1.0 to disable). ",
-    "Negative ADM Guidance Scaler": "Negative ADM Guidance Scaler",
-    "The scaler multiplied to negative ADM (use 1.0 to disable). ": "The scaler multiplied to negative ADM (use 1.0 to disable). ",
-    "ADM Guidance End At Step": "ADM Guidance End At Step",
-    "When to end the guidance from positive/negative ADM. ": "When to end the guidance from positive/negative ADM. ",
-    "Refiner swap method": "Refiner swap method",
-    "joint": "joint",
-    "separate": "separate",
+    "Refresh": "Làm mới",
+    "\ud83d\udd04 Refresh All Files": "\ud83d\udd04 Làm mới tất cả các tệp",
+    "Sampling Sharpness": "Độ sắc nét lấy mẫu",
+    "Higher value means image and texture are sharper.": "Giá trị cao hơn có nghĩa là hình ảnh và kết cấu sắc nét hơn.",
+    "Guidance Scale": "Thang lấy nét",
+    "Higher value means style is cleaner, vivider, and more artistic.": "Giá trị cao hơn có nghĩa là phong cách rõ ràng hơn, sống động hơn và nghệ thuật hơn.",
+    "Developer Debug Mode": "Chế độ gỡ lỗi cho NPT",
+    "Developer Debug Tools": "Công cụ gỡ lỗi cho NPT",
+    "Positive ADM Guidance Scaler": "Bộ mở rộng hướng dẫn ADM tích cực",
+    "The scaler multiplied to positive ADM (use 1.0 to disable). ": "Bộ chia tỷ lệ nhân với gợi ý tích cực ADM âm (sử dụng 1.0 để tắt). ",
+    "Negative ADM Guidance Scaler": "Bộ mở rộng hướng dẫn ADM tiêu cực",
+    "The scaler multiplied to negative ADM (use 1.0 to disable). ": "Bộ chia tỷ lệ nhân với gợi ý tiêu cực ADM âm (sử dụng 1.0 để tắt). ",
+    "ADM Guidance End At Step": "Hướng dẫn của ADM kết thúc ở bước",
+    "When to end the guidance from positive/negative ADM. ": "Khi nào nên kết thúc hướng dẫn từ ADM tích cực/tiêu cực. ",
+    "Refiner swap method": "Phương pháp hoán đổi nhà máy lọc dầu",
+    "joint": "Chung",
+    "separate": "Chia",
     "vae": "vae",
-    "CFG Mimicking from TSNR": "CFG Mimicking from TSNR",
-    "Enabling Fooocus's implementation of CFG mimicking for TSNR (effective when real CFG > mimicked CFG).": "Enabling Fooocus's implementation of CFG mimicking for TSNR (effective when real CFG > mimicked CFG).",
-    "Sampler": "Sampler",
+    "CFG Mimicking from TSNR": "Bắt chước CFG từ TSNR",
+    "Enabling Fooocus's implementation of CFG mimicking for TSNR (effective when real CFG > mimicked CFG).": "Cho phép Fooocus triển khai mô phỏng CFG cho TSNR (hiệu quả khi CFG thực > CFG mô phỏng).",
+    "Sampler": "sampler",
     "dpmpp_2m_sde_gpu": "dpmpp_2m_sde_gpu",
-    "Only effective in non-inpaint mode.": "Only effective in non-inpaint mode.",
+    "Only effective in non-inpaint mode.": "Chỉ có hiệu quả ở chế độ không inpaint.",
     "euler": "euler",
     "euler_ancestral": "euler_ancestral",
     "heun": "heun",
@@ -333,39 +333,39 @@
     "sgm_uniform": "sgm_uniform",
     "simple": "simple",
     "ddim_uniform": "ddim_uniform",
-    "Forced Overwrite of Sampling Step": "Forced Overwrite of Sampling Step",
-    "Set as -1 to disable. For developer debugging.": "Set as -1 to disable. For developer debugging.",
-    "Forced Overwrite of Refiner Switch Step": "Forced Overwrite of Refiner Switch Step",
-    "Forced Overwrite of Generating Width": "Forced Overwrite of Generating Width",
-    "Set as -1 to disable. For developer debugging. Results will be worse for non-standard numbers that SDXL is not trained on.": "Set as -1 to disable. For developer debugging. Results will be worse for non-standard numbers that SDXL is not trained on.",
-    "Forced Overwrite of Generating Height": "Forced Overwrite of Generating Height",
-    "Forced Overwrite of Denoising Strength of \"Vary\"": "Forced Overwrite of Denoising Strength of \"Vary\"",
-    "Set as negative number to disable. For developer debugging.": "Set as negative number to disable. For developer debugging.",
-    "Forced Overwrite of Denoising Strength of \"Upscale\"": "Forced Overwrite of Denoising Strength of \"Upscale\"",
+    "Forced Overwrite of Sampling Step": "Buộc ghi đè bước lấy mẫu",
+    "Set as -1 to disable. For developer debugging.": "Đặt là -1 để tắt.  Để gỡ lỗi cho nhà phát triển.",
+    "Forced Overwrite of Refiner Switch Step": "Buộc ghi đè bước chuyển đổi bộ lọc",
+    "Forced Overwrite of Generating Width": "Buộc ghi đè việc tạo chiều rộng",
+    "Set as -1 to disable. For developer debugging. Results will be worse for non-standard numbers that SDXL is not trained on.": "Đặt là -1 để tắt.  Để gỡ lỗi cho nhà phát triển.  Kết quả sẽ tệ hơn đối với các số không chuẩn mà SDXL không được đào tạo.",
+    "Forced Overwrite of Generating Height": "Buộc ghi đè việc tạo chiều cao",
+    "Forced Overwrite of Denoising Strength of \"Vary\"": "Buộc ghi đè sức mạnh khử nhiễu của \"Biến đổi\"",
+    "Set as negative number to disable. For developer debugging.": "Đặt làm số âm để tắt.  Để gỡ lỗi cho nhà phát triển.",
+    "Forced Overwrite of Denoising Strength of \"Upscale\"": "Buộc ghi đè sức mạnh khử nhiễu của \"Nâng cấp\"",
     "Inpaint Engine": "Inpaint Engine",
     "v1": "v1",
-    "Version of Fooocus inpaint model": "Version of Fooocus inpaint model",
+    "Version of Fooocus inpaint model": "Phiên bản mô hình inpaint Fooocus",
     "v2.5": "v2.5",
-    "Control Debug": "Control Debug",
-    "Debug Preprocessors": "Debug Preprocessors",
-    "Mixing Image Prompt and Vary/Upscale": "Mixing Image Prompt and Vary/Upscale",
-    "Mixing Image Prompt and Inpaint": "Mixing Image Prompt and Inpaint",
-    "Softness of ControlNet": "Softness of ControlNet",
-    "Similar to the Control Mode in A1111 (use 0.0 to disable). ": "Similar to the Control Mode in A1111 (use 0.0 to disable). ",
+    "Control Debug": "Kiểm soát gỡ lỗi",
+    "Debug Preprocessors": "Gỡ lỗi bộ tiền xử lý",
+    "Mixing Image Prompt and Vary/Upscale": "Trộn hình ảnh nhắc nhở và biến/nâng cấp",
+    "Mixing Image Prompt and Inpaint": "Trộn hình ảnh nhắc nhở và Inpaint",
+    "Softness of ControlNet": "Độ mềm của ControlNet",
+    "Similar to the Control Mode in A1111 (use 0.0 to disable). ": "Tương tự như Chế độ Control trong A1111 (sử dụng 0,0 để tắt). ",
     "Canny": "Canny",
-    "Canny Low Threshold": "Canny Low Threshold",
-    "Canny High Threshold": "Canny High Threshold",
+    "Canny Low Threshold": "Canny ngưỡng thấp",
+    "Canny High Threshold": "Canny ngưỡng cao",
     "FreeU": "FreeU",
-    "Enabled": "Enabled",
+    "Enabled": "Bật",
     "B1": "B1",
     "B2": "B2",
     "S1": "S1",
     "S2": "S2",
-    "Extreme Speed": "Extreme Speed",
-    "\uD83D\uDD0E Type here to search styles ...": "\uD83D\uDD0E Type here to search styles ...",
-    "Type prompt here.": "Type prompt here.",
-    "Outpaint Expansion Direction:": "Outpaint Expansion Direction:",
-    "* Powered by Fooocus Inpaint Engine (beta)": "* Powered by Fooocus Inpaint Engine (beta)",
+    "Extreme Speed": "Tốc độ cực cao",
+    "\uD83D\uDD0E Type here to search styles ...": "\uD83D\uDD0E Nhập vào đây để tìm kiếm các phong cách ...",
+    "Type prompt here.": "Nhập gợi ý tại đây.",
+    "Outpaint Expansion Direction:": "Hướng mở rộng Outpaint:",
+    "* Powered by Fooocus Inpaint Engine (beta)": "* Được cung cấp bởi Fooocus Inpaint Engine (thử nghiệm)",
     "Fooocus Enhance": "Fooocus Enhance",
     "Fooocus Cinematic": "Fooocus Cinematic",
     "Fooocus Sharp": "Fooocus Sharp"
